--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "node-sass": "4.14.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.19.5",
     "react-redux": "^7.2.3",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
